--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,58 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap");
+body, html {
+  margin: 0; }
+
 body {
+  height: 100%;
   background: black;
-  color: #fff; }
+  font-weight: bold;
+  color: #fff;
+  font-family: "Montserrat", sans serif;
+  font-size: .8em; }
+
+header {
+  padding: 1em;
+  display: flex;
+  width: calc(100% - 2em);
+  justify-content: space-between;
+  z-index: 20;
+  border: 1px solid grey; }
+  header a {
+    text-decoration: none;
+    color: #fff; }
+  header a.logo {
+    font-weight: bold;
+    text-transform: uppercase; }
+  header nav ul {
+    display: flex;
+    list-style-type: none;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    justify-content: space-around; }
+    header nav ul li a {
+      padding: .3em; }
+
+.wrapper {
+  display: grid;
+  border: 2px solid green;
+  grid-template-columns: 1fr; }
+  .wrapper section {
+    margin: 1.5em;
+    padding: 1em;
+    border: 1px solid blue; }
+  .wrapper section.intro {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1em; }
+    .wrapper section.intro .profile-pic, .wrapper section.intro .bio {
+      padding: 1em;
+      text-align: center;
+      border: 1px solid gray; }
+    .wrapper section.intro .profile-pic img {
+      width: 100%;
+      object-fit: contain; }
+
+footer {
+  border: 1px solid gray;
+  text-align: center; }
