--- a/css/main.css
+++ b/css/main.css
@@ -39,20 +39,30 @@ header {
 
 .wrapper {
   display: grid;
-  border: 2px solid green;
-  grid-template-columns: auto; }
+  grid-template-columns: 1fr;
+  grid-template-rows: 100vh;
+  align-items: center;
+  justify-items: center;
+  /* adjusted */ }
   .wrapper section {
     margin: 1.5em;
     padding: 1em;
-    border: 1px solid blue; }
+    border: 1px solid blue;
+    width: 50%; }
   .wrapper section.intro {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1em; }
-    .wrapper section.intro .profile-pic, .wrapper section.intro .bio {
-      padding: 1em;
-      text-align: center;
+    grid-template-columns: 1fr; }
+    .wrapper section.intro .profile-pic {
+      display: grid;
+      padding: 2em;
       border: 1px solid gray; }
+    .wrapper section.intro .profile-pic img {
+      display: grid;
+      object-fit: cover;
+      width: 100%;
+      border-radius: 50%; }
+    .wrapper section.intro .profile-pic p {
+      display: grid; }
   .wrapper section.work {
     display: grid;
     grid-gap: 20px; }
@@ -62,10 +72,12 @@ header {
       border: 1px solid gray; }
     .wrapper section.work .projects {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: 1fr;
       grid-gap: 20px;
       padding: 1em;
       border: 1px solid gray; }
+    .wrapper section.work .projects img {
+      max-width: 100%; }
 
 footer {
   border: 1px solid gray;
