--- a/css/style.css
+++ b/css/style.css
@@ -187,24 +187,63 @@ header {
 	margin: 1em 3em;
 	}
 
+nav {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 70px;
+	padding: 10px 100px;
+	box-sizing: border-box;
+	transition: .3s;
+	z-index: 100;
+}
+
+nav.black {
+	background: rgba(0,0,0,0.6);
+	height: 70px;
+	padding: 10px 100px;
+}
+
 nav ul {
 	margin: 0;
 	padding: 0;
 	list-style: none;
+	float: right;
+	display: flex;
 }
 
-nav li {
-	display: inline-block;
-	margin: 1em;
+nav ul li {
+	/* display: inline-block; */
+	/* margin: 1em .5em; */
+	list-style: none;
 }
 
-nav a {
+nav ul li a {
+	line-height: 70px;
+	color: #151515;
+	padding: 7px 20px;
 	text-decoration: none;
 	text-transform: uppercase;
-	padding: .3em;
+	transition: .3s;
+	/* padding: .3em;
 	font-size: .9rem;
 	font-weight: 600;
+	color: #fff; */
+}
+
+nav.black ul li a {
 	color: #fff;
+}
+
+nav ul li a:focus {
+	outline: none;
+}
+
+nav ul li a.active {
+	background: #E2472F;
+	color: #fff;
+	border-radius: 6px;
 }
 
 nav a:hover,
@@ -275,6 +314,7 @@ section.home-hero {
 }
 
 @media (min-width: 960px) {
+
 	h1 {
 		font-size: 2.5rem;
 	}
@@ -331,7 +371,7 @@ section.home-hero {
 .port-desc {
 	/* these 2 properties let the description be on top of the image */
 	position: absolute;
-	z-index: 100;
+	z-index: 99;
 	bottom: 0em;
 	/* making left and right zero, centers the item */
 	left: 0em;
