--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ header {
 	position: fixed;
 	float: left;
 	margin-right: 1em;
-	margin: 16px 36px;
+	margin-top: .8em;
 	color: #fff;
 	cursor: pointer;
 	z-index: 1000;
@@ -218,15 +218,10 @@ header {
 
 nav {
 	position: fixed;
+	z-index: 1000;
 	width: 100%;
-	/* z-index: 1000; */
-  /* top: 0;
-	left: 0;
-
-	height: 70px;
-	padding: 10px 100px;
 	box-sizing: border-box;
-	transition: .3s; */
+	transition: .3s;
 
 }
 
@@ -235,7 +230,9 @@ nav ul {
 	background: rgba(0,0,0,0);
 	overflow: hidden;
 	color: #fff;
-	margin: 1px 36px;
+	/* margin: 1em 0; */
+	margin: 0;
+	padding: 0;
 	text-align: right;
 	transition: 1s;
 	float: right;
@@ -245,9 +242,12 @@ nav ul {
 
 
 nav.black ul {
-	background: rgba(0,0,0,0.6);
-	height: 70px;
-	padding: 10px 0px;
+	background: rgba(0,0,0,0.8);
+	height: 50px;
+	margin: 0;
+	padding: 0;
+	padding: 0 70px;
+	/* padding: 10px 0px; */
 	width: 100%;
 }
 
@@ -261,7 +261,7 @@ nav.black ul li a:hover {
 
 nav ul li {
 	/* display: inline-block; */
-	/* margin: 1em .5em; */
+	margin: 1em .5em;
 	list-style: none;
 	display: inline-block;
 }
@@ -720,8 +720,20 @@ footer {
 	.social-icons {
 		position: fixed;
 		top: 0;
-		/* margin-top: 16px; */
+		margin-top: -11px;
+		/* margin-bottom: 50px; */
 	}
+
+	/* .social-icons i {
+		position: fixed;
+		float: left;
+		top: 0;
+		margin-right: 1em;
+		margin-top: .8em;
+		color: #fff;
+		cursor: pointer;
+		z-index: 1000;
+	} */
 
 	nav ul {
 		max-height: 0px;
@@ -739,7 +751,7 @@ footer {
 	nav ul li {
 		box-sizing: border-box;
 		width: 100%;
-		padding: 24px 0;
+		/* padding: 24px	 0; */
 		/* text-align: center; */
 	}
 
