--- a/css/style.css
+++ b/css/style.css
@@ -1,765 +1,328 @@
-/* Global styles */
-
 * {
-	box-sizing: border-box;
-	transition: all ease-in-out 250ms;
-}
-
-html, body {
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	/* text-align: center; */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-	font-family: "Raleway", sans-serif;
+  display: grid;
+  grid-template-rows: auto 92vh 10em 10em;
+  grid-template-columns: 10% 1fr auto 1fr 10%;
+  grid-template-areas:
+  "header header header header header"
+  "hero   hero   hero   hero   hero"
+  " .   main   main   main   ."
+  " .      form   form   form   . "
+  " .      footer   footer   footer   . ";
+  background: black;
 }
-
-img {
-	max-width: 100%;
-	height: auto;
-}
-
-.container {
-	width: 100%;
-	max-width: 68em;
-	margin: 0 auto;
-}
-
-.clearfix::after,
-section::after,
-footer::after {
-	content: "";
-	display: block;
-	clear: both;
-}
-
-/* Column system */
-
-/* any class that starts with */
-[class^=col-] {
-	width: 100%;
-	margin-top: 1em;
-}
-
-[class^=col-]:first-child {
-	margin-top: 0;
-}
-
-.col-1 {
-	width: 33.3333334%
-	float: left;
-}
-
-@media (min-width: 40rem) {
-
-	[class^=col-] {
-		float: left;
-		padding: 0 .5em;
-		margin-top: 0;
-	}
-
-	/* [class^=col-]:first-child {
-		padding=left: 0;
-	} */
-
-	/* [class^=col-]:last-child {
-		padding=left: 0;
-	} */
-
-	.col-3 {
-		width: 50%;
-	}
-
-	.col-1 {
-		width: 16.6666%;
-	}
-}
-
-/* Typography */
-
-h1 {
-	font-weight: 300;
-	font-size: 2.5rem;
-	margin-top: 0;
-}
-
-p {
-	margin-top: 0;
-	line-height: 1.5;
-}
-
-p:last-of-type {
-	margin-bottom: 0;
-}
-
-.title {
-	font-size: 2rem;
-	font-weight: 800;
-	margin-top: 1em;
-}
-
-.title span {
-	font-weight: 300;
-	/* displays the span on its own line */
-	display: block;
-	font-size: .9em;
-}
-
-.title-cta {
-	margin: 0 0 1em;
-	font-weight: 300;
-}
-
-.unstyled-list li {
-	margin: 1em;
-	display: inline;
-	padding: 1em;
-	list-style-type: none;
-}
-
-@media (min-width: 960px) {
-
-	p {
-		font-size: .9rem;
-		line-height: 1.5;
-	}
-
-	.title {
-		font-size: 3.1rem;
-	}
-}
-
-/* buttons */
-
-.button {
-	/* allows padding to be effectively applied */
-	display: inline-block;
-	font-size: 1.5rem;
-	text-decoration: none;
-	text-transform: uppercase;
-	border-width: 1px;
-	border-style: solid;
-	padding: .5em 1.75em;
-}
-
-@media (min-width: 960px) {
-	.button {
-		font-size: 1.5rem;
-		color: #fff;
-	}
-}
-
-.button-accent {
-	color: #fff;
-}
-
-.button-accent:hover,
-.button-accent:focus {
-	background: black;
-	color: #232323;
-	color: #fff;
-}
-
-.button-small {
-	color: black;
-	font-size: .6em;
-	color: #fff;
-}
-
-.button-contact-us {
-	color: #fff;
-	font-size: 1em;
-}
-
-.button-contact-us:hover,
-.button-contact-us:focus {
-	background: black;
-	color: #232323;
-	color: #fff;
-}
-
-
-
-/* nav bar */
 
 header {
-	/* makes the header stay on top of the hero */
-	/* position: absolute; */
-	/* left: 0; */
-	width: 100%;
-	height: 100vh;
-	background: url(../images/hero-bg.jpg) no-repeat;
-	background-size: cover;
-	/* right: 0; */
-	/* margin: 1em 3em; */
-	}
-
-.social-icons i {
-	position: fixed;
-	float: left;
-	margin-right: 1em;
-	margin-top: .8em;
-	color: #fff;
-	cursor: pointer;
-	z-index: 1000;
-}
-
-.social-icons a {
-	padding: 0 2em;
-	z-index: 1000;
-}
-
-.social-icons i:hover {
-	/* left: 0; */
-	color: #00ff6c;
+  grid-area: header;
+  background: grey;
 }
 
 nav {
-	position: fixed;
-	z-index: 1000;
-	width: 100%;
-	box-sizing: border-box;
-	transition: .3s;
-
-}
-
-nav ul {
-	list-style: none;
-	background: rgba(0,0,0,0);
-	overflow: hidden;
-	color: #fff;
-	/* margin: 1em 0; */
-	margin: 0;
-	padding: 0;
-	text-align: center;
-	transition: 1s;
-	float: right;
-	z-index: 1000;
-	/* display: flex; */
-}
-
-
-nav.black ul {
-	background: rgba(0,0,0,0.8);
-	height: 50px;
-	margin: 0;
-	padding: 0;
-	padding: 0 70px;
-	/* padding: 10px 0px; */
-	width: 100%;
-}
-
-nav.black ul li a {
-	color: #fff;
-}
-
-nav.black ul li a:hover {
-	color: #00ff6c;
-}
-
-nav ul li {
-	/* display: inline-block; */
-	margin: 1em .5em;
-	list-style: none;
-	display: inline-block;
-}
-
-.menu-icon {
-	width: 100%;
-	background: rgba(0,0,0,0.6);
-	text-align: right;
-	box-sizing: border-box;
-	padding: 15px 24px;
-	cursor: pointer;
-	color: #fff;
-	display: none;
-}
-
-nav ul li a {
-	/* line-height: 50px; */
-	color: #fff;
-	padding: 1px 20px;
-	text-decoration: none;
-	text-transform: uppercase;
-	transition: .3s;
-	/* padding: .3em;
-	font-size: .9rem;
-	font-weight: 600;
-	color: #fff; */
-}
-
-nav ul li a:hover {
-	color: #00ff6c;
-}
-
-/* nav ul li a:focus {
-	outline: none;
-} */
-
-/* nav ul li a.active {
-	background: #E2472F;
-	color: #fff;
-	border-radius: 6px;
-} */
-
-/* nav a:hover,
-nav a:focus {
-	color: #00ff6c;
-} */
-
-@media (min-width: 960px) {
-	nav {
-		float: right;
-	}
-}
-
-/* hero section */
-/*
-section.home-hero {
-	background: url(../images/hero-bg.jpg);
-	background-size: cover;
-	background-position: center;
-	padding: 10.3em 0;
-	color: #fff;
-}
-
-@media (min-width: 960px) {
-	.home-hero {
-		height: 100vh;
-		padding-top: 50vh;
-	}
-
-} */
-
-/* home-about section */
-
-.home-about-textbox {
-	background-color: #232323;
-	padding: 4em;
-	width: 100vw;
-	margin-left: -2.7%;
-	outline: 2px solid #00ff6c;
-	outline-offset: -2.5em;
-	color: #fff;
-	/* makes this show behind the h1 which has a position = absolute */
-	position: relative;
-}
-
-.home-about-textbox h1 {
-	color: #00ff6c;
-	position: absolute;
-	/* moves the h1 all the way to the middle of the screen */
-	left: 50%;
-	transform: translateX(-50%);
-	/* moves the h1 up/down */
-	top: .75em;
-	/* we give it the same background color as the textbox so it creates the effect of cutting the margin line */
-	background-color: #232323;
-	padding: 0 .25em;
-}
-
-@media (min-width: 320px) {
-	h1 {
-		font-size: 1.35em;
-	}
-
-	.home-about-textbox h1 {
-		top: .6em;
-		padding: 0 .325em;
-	}
-}
-
-@media (min-width: 960px) {
-
-	h1 {
-		font-size: 2.5rem;
-	}
-
-	.home-about {
-		background-image: url(../images/portrait_m.png);
-		border-radius: 3em;
-		float: right;
-		background-repeat: no-repeat;
-		margin: 4em .5em;
-		background-size: 30%;
-		background-color: #232323;
-		/* background-size: cover; */
-		background-position: right;
-		/* padding: 3.5em; */
-		/* padding-bottom: 6em; */
-	}
-
-	.home-about-textbox {
-		width: 55%;
-		padding: 5em;
-		margin-left: -1.5%;
-		top: -8.2em;
-		text-align: left;
-		box-shadow: 0 0 4em 0 rgba(0,0,0,.5);
-	}
-
-	.home-about-textbox h1 {
-		top: .3em;
-		left: 3.25rem;
-		transform: translateX(0);
-	}
-}
-
-
-/* portfolio section */
-
-.portfolio {
-	/* 3 on top, 0 left&right, 0 on bottom */
-	background-color: #232323;
-	color: #fff;
-}
-
-.port-item {
-	/* this lets overlap any other item on top of the image */
-	margin: 0;
-	position: relative;
-}
-
-.port-item img {
-	display: block;
-}
-
-.port-desc {
-	/* these 2 properties let the description be on top of the image */
-	position: absolute;
-	z-index: 99;
-	bottom: 0em;
-	/* making left and right zero, centers the item */
-	left: 0em;
-	right: 0em;
-	color: #fff;
-	/* this makes the background transparent */
-	background: rgba(0,0,0,.5);
-	padding-bottom: 1em;
-}
-
-.port-desc p {
-	margin: 1em;
-}
-
-/* @media (min-width: 592px) {
-	.port-item {
-		width: 100%;
-		float: left;
-	} */
-
-	@media (min-width: 632px) {
-
-		.portfolio {
-			/* 3 on top, 0 left&right, 0 on bottom */
-			/* margin: 2em 0 0; */
-			padding: 2rem;
-			background-color: #232323;
-			color: #fff;
-		}
-
-		.portfolio h1 {
-			text-transform: uppercase;
-			font-size: 2em;
-		}
-
-		.port-item {
-			width: 50%;
-			position: relative;
-			/* margin: 0; */
-			float: left;
-			font-size: 1.1em;
-			overflow: hidden;
-		}
-}
-
-	@media (min-width: 960px) {
-
-		.portfolio h1 {
-			text-transform: uppercase;
-			font-size: 2em;
-		}
-
-		.port-item {
-			width: 33.3333334%;
-			position: relative;
-			font-size: 1.3em;
-			overflow: hidden;
-		}
-
-		.port-desc {
-			transform: translateY(150%);
-		}
-
-		.port-item:hover .port-desc {
-			transform: translateY(0%);
-		}
-
-}
-
-
-/*Start timeline*/
-
-section.experience {
-	background: #232323;
-	color: #fff;
-}
-section.experience .container {
-	padding: 3em;
-}
-
-.section-heading h6 {
-	font-size: 1em;
-	margin: 0 auto;
-	padding: 1em;
-}
-
-.timeline {
-	margin-left: 4em;
-	padding: 2em;
-}
-
-.timeline ul {
-  border-left: 2px solid #ffe838;
-  border-radius: .8rem;
-  background-color: rgba(0,0,0,0.05);
-  /* center the ul */
-  margin: 0 auto;
-  position: relative;
-  padding: 2rem;
-  list-style: none;
-  text-align: left;
-  width: 70%;
-	font-size: .9em;
-}
-
-.timeline h1 {
-  font-size: 1.3rem;
-  text-transform: uppercase;
-  font-weight: 300;
-  margin-bottom: 1rem;
-  opacity: .3;
-}
-
-.timeline .date {
-  border-bottom: 1px solid rgba(255,255,255,0.1);
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
-  position: relative;
-}
-
-/* select the last item of the ul */
-
-.timeline .date:last-of-type {
-  margin-bottom: 0;
-  padding-bottom: 0;
-  border: none;
-}
-
-/* create the pseudo elements */
-
-.timeline .date::before,
-.timeline .date::after {
-  position: absolute;
-  display: block;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.timeline .date::before {
-  /* gets the value of the attribute (date) */
-  content: attr(data-date);
-  /* moves the element all the way to the left */
-  left: -21rem;
-  text-align: right;
-  /* takes the element back to the right */
-  min-width: 12rem;
-  font-size: 1rem;
-}
-
-.timeline .date::after {
-  /* initialises the new content   */
-  content: "";
-  /* creates the new object (circle, square, etc) */
-  box-shadow: 0 0 0 2px #00ff6c;
-  /* turn the element into a circle */
-  border-radius: 100%;
-  /* moves the element all the way to the left */
-  left: -8rem;
-  /* both height and width have the same rem to make a perfect circle */
-  height: 1rem;
-  width: 1rem;
-  background-color: #313534;
-}
-
-/*End timeline*/
-
-/*Start contact*/
-
-.contact {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
   background-color: #232323;
-	color: #fff;
 }
 
-.section-heading h1 {
-	text-transform: uppercase;
-	font-size: 2em;
-	margin-bottom: .2em;
+.social-icons i {
+  color: #fff;
+  margin-right: .5em;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  width: 35em;
+}
+
+.nav-links li {
+  list-style-type: none;
+}
+
+.nav-links a {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.burger {
+  display: none;
+  cursor: pointer;
+}
+
+.burger div {
+  width: 25px;
+  height: 3px;
+  border-radius: 30%;
+  background-color: #fff;
+  margin: 5px;
+  transition: all 0.3 ease;
+}
+
+.hero {
+  grid-area: hero;
+  background: lightgreen;
+  background-image: url("../images/hero-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.hero-title h2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5em;
+  color: #fff;
+  font-weight: 300;
+}
+
+.hero-title h3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2em;
+  color: #fff;
+  font-weight: 300;
+}
+
+.scrolldown {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  width: 20%;
+  height: 110px;
+  transform: translateY(-120px) translateX(-50%) rotate(45deg);
+  /* opacity: 1; */
+}
+
+.scrolldown span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 50%;
+  height: 50%;
+  border-bottom: 2px solid #fff;
+  border-right: 2px solid #fff;
+  animation: animate 1.5s linear infinite;
+  opacity: 0;
+}
+
+.scrolldown span:nth-child(1) {
+  transform: translate(-15px, -15px);
+  animation-delay: -0.4s;
+}
+
+.scrolldown span:nth-child(2) {
+  transform: translate(0, 0);
+  animation-delay: -0.2s;
+}
+
+.scrolldown span:nth-child(3) {
+  transform: translate(15px, 15px);
+  animation-delay: 0s;
+}
+
+main {
+  grid-area: main;
+  background: lightblue;
 }
 
 form {
-  width: 70%;
-  /* to center the form */
-  margin: 0 auto;
+  grid-area: form;
+  background: green;
 }
-
-form label {
-  font-size: .9em;
-	float: left;
-	margin: .5em 0 .5em 0;
-}
-
-input,
-select,
-textarea {
-  width: 100%;
-  padding: 0.5rem;
-  margin-bottom: 5px;
-  border-radius: .5em;
-  outline-color: #fd57bf;
-}
-
-/* this is to style the 'Submit' button */
-input[type="submit"] {
-  /* moves the button to the left */
-  width: initial;
-  background-color: #313534;
-  color: #fff;
-  /* padding top & bottom / left & right */
-  padding: 1rem 2rem;
-  border-radius: .8rem;
-  cursor: pointer;
-  /* which type of effect, in which property it should be applied and for how long */
-  transition: background-color 650ms;
-	margin: 1.5em 0 3em 0;
-}
-
-input [type="submit"]:hover {
-  color: #221e3f;
-  background-color: #ffe838;
-}
-
-/*End contact*/
-
-/*Start footer*/
 
 footer {
-	background: #232323;
-	color: #fff;
-	text-align: left;
-	font-size: .9em;
-	padding: 5em 0;
-}
-
-.copyright {
-  width: 100%;
-  text-align: center;
-  background-color: black;
-  padding: 2rem 0;
-  position: relative;
-	color: #fff;
-}
-
-.up {
-  position: absolute;
-  width: .5em;
-  height: .5em;
-  background-color: #232323;
-  top: -4rem;
-  right: 3rem;
-  border-radius: 100%;
-  /* to center the icon in the middle */
+  grid-area: footer;
+  background: pink;
   display: flex;
-  /* add the animation from section below */
-  animation: pulse 2s infinite;
-  cursor: pointer;
+  justify-content: center;
+  align-items: center;
 }
 
-.up i {
-  color: #00ff6c;
-  font-size: 2rem;
-	top: -4rem;
-  right: 3rem;
-}
 
-.copyright p {
-  font-size: .9em;
-}
+/* media queries */
 
-/*End footer*/
-
-/*Start animations*/
-
-@keyframes pulse {
-  0%{
-    box-shadow: 0 0 0 0 rgba(253, 87, 191, 0.99);
+@media screen and (max-width:1024px) {
+  .nav-links {
+    width: 30em;
   }
-  70%{
-    box-shadow: 0 0 0 2rem rgba(253, 87, 191, 0);
+
+  .scrolldown {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    width: 20%;
+    height: 110px;
+    transform: translateY(-120px) translateX(-50%) rotate(45deg);
+    /* opacity: 1; */
   }
-  100%{
-    box-shadow: 0 0 0 0 rgba(253, 87, 191, 0);
+
+  .scrolldown span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 50%;
+    height: 50%;
+    border-bottom: 2px solid #fff;
+    border-right: 2px solid #fff;
+    animation: animate 1.5s linear infinite;
+    opacity: 0;
+  }
+
+}
+@media screen and (max-width:320px) {
+
+  body {
+    overflow-x: hidden;
+    display: grid;
+    grid-template-rows: auto 92vh 30em 15em;
+    grid-template-columns: 10% 1fr auto 1fr 10%;
+    grid-template-areas:
+    "header header header header header"
+    "hero   hero   hero   hero   hero"
+    " .   main   main   main   ."
+    " .      form   form   form   . "
+    " .      footer   footer   footer   . ";
+    background: black;
+  }
+
+  .nav-links {
+    position: absolute;
+    right: 0px;
+    /* ends here */
+    height: 50vh;
+    /* starts here */
+    top: 8vh;
+    background-color: #232323;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* customizable */
+    width: 100%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+
+  .nav-links li {
+    opacity: 0;
+  }
+
+  .burger {
+    display: block;
+  }
+
+  .scrolldown {
+    position: absolute;
+    bottom: -80px;
+    left: 45%;
+    width: 20%;
+    height: 110px;
+    transform: translateY(-120px) translateX(-50%) rotate(45deg);
+    /* opacity: 1; */
+  }
+
+  .scrolldown span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 35%;
+    height: 20%;
+    border-bottom: 2px solid #fff;
+    border-right: 2px solid #fff;
+    animation: animate 1.5s linear infinite;
+    opacity: 0;
+  }
+
+}
+
+
+/* animations */
+
+@keyframes navLinkFade {
+  from{
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to{
+    opacity: 1;
+    transform: translateX(0px);
   }
 }
 
-/*End animations*/
-
-@media(max-width:580px) {
-	.social-icons {
-		position: fixed;
-		top: 0;
-		margin-top: -11px;
-		/* margin-bottom: 50px; */
-	}
-
-	/* .social-icons i {
-		position: fixed;
-		float: left;
-		top: 0;
-		margin-right: 1em;
-		margin-top: .8em;
-		color: #fff;
-		cursor: pointer;
-		z-index: 1000;
-	} */
-
-	nav ul {
-		max-height: 0px;
-		background: rgba(0, 0, 0, 0.8);
-	}
-
-	nav.black ul {
-		background: rgba(0, 0, 0, 0.8);
-	}
-
-	.showing {
-		max-height: 50em;
-		/* text-align: center; */
-	}
-
-	nav ul li {
-		box-sizing: border-box;
-		width: 100%;
-		/* padding: 24px	 0; */
-		/* text-align: center; */
-	}
-
-	.menu-icon {
-		display: block;
-	}
+@keyframes animate {
+  0%
+  {
+    top: -5px;
+    left: -5px;
+    opacity: 0;
+  }
+  25%
+  {
+    top: 0px;
+    left: 0px;
+    opacity: 1;
+  }
+  50,100%
+  {
+    top: 5px;
+    left: 5px;
+    opacity: 0;
+  }
 }
+
+/* Classes added on click */
+
+.nav-active {
+  transform: translateX(0%);
+}
+
+.toggle .line1 {
+transform: rotate(-45deg) translate(-5px, 6px);
+transition: transform 0.5s ease-in;
+}
+
+.toggle .line2 {
+opacity: 0;
+}
+
+.toggle .line3 {
+transform: rotate(45deg) translate(-5px, -6px);
+transition: transform 0.5s ease-in;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
