--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,15 @@
 
 body {
   display: grid;
-  grid-template-rows: auto 92vh 10em 10em;
-  grid-template-columns: 10% 1fr auto 1fr 10%;
+  grid-template-rows: auto 92vh 35em 20em;
+  grid-template-columns: auto;
   grid-template-areas:
   "header header header header header"
   "hero   hero   hero   hero   hero"
-  " .   main   main   main   ."
-  " .      form   form   form   . "
-  " .      footer   footer   footer   . ";
-  background: black;
+  " main   main   main   main   main"
+  " form   form   form   form  form "
+  " footer footer footer footer footer ";
+  /* background: black; */
 }
 
 header {
@@ -28,6 +28,10 @@ nav {
   align-items: center;
   min-height: 8vh;
   background-color: #232323;
+}
+
+.social-icons a {
+  color: #232323;
 }
 
 .social-icons i {
@@ -76,12 +80,13 @@ nav {
 
 .hero-title h2 {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
-  padding-top: 5em;
+  padding-top: 3em;
   color: #fff;
   font-weight: 300;
+  font-size: 3em;
 }
 
 .hero-title h3 {
@@ -96,9 +101,9 @@ nav {
 
 .scrolldown {
   position: absolute;
-  bottom: 10px;
+  bottom: -130px;
   left: 50%;
-  width: 20%;
+  width: 10%;
   height: 110px;
   transform: translateY(-120px) translateX(-50%) rotate(45deg);
   /* opacity: 1; */
@@ -109,8 +114,8 @@ nav {
   top: 0;
   left: 0;
   display: block;
-  width: 50%;
-  height: 50%;
+  width: 30%;
+  height: 35%;
   border-bottom: 2px solid #fff;
   border-right: 2px solid #fff;
   animation: animate 1.5s linear infinite;
@@ -135,6 +140,8 @@ nav {
 main {
   grid-area: main;
   background: lightblue;
+  padding: 5em;
+  /* margin: 2em; */
 }
 
 form {
@@ -182,13 +189,82 @@ footer {
   }
 
 }
+
+
+@media screen and (max-width:768px) {
+
+  body {
+    overflow-x: hidden;
+    display: grid;
+    grid-template-rows: auto 92vh 30em 15em;
+    grid-template-columns: auto;
+    grid-template-areas:
+    "header header header header header"
+    "hero   hero   hero   hero   hero"
+    " main   main   main   main   main"
+    " form      form   form   form   form "
+    " footer  footer   footer footer  footer ";
+    background: black;
+  }
+
+  .nav-links {
+    position: absolute;
+    right: 0px;
+    /* ends here */
+    height: 50vh;
+    /* starts here */
+    top: 8vh;
+    background-color: #232323;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* customizable */
+    width: 100%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+
+  .nav-links li {
+    opacity: 0;
+  }
+
+  .burger {
+    display: block;
+  }
+
+  .scrolldown {
+    position: absolute;
+    bottom: -150px;
+    left: 50%;
+    width: 20%;
+    height: 110px;
+    transform: translateY(-120px) translateX(-50%) rotate(45deg);
+    /* opacity: 1; */
+  }
+
+  .scrolldown span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 35%;
+    height: 45%;
+    border-bottom: 2px solid #fff;
+    border-right: 2px solid #fff;
+    animation: animate 1.5s linear infinite;
+    opacity: 0;
+  }
+
+}
+
+
 @media screen and (max-width:320px) {
 
   body {
     overflow-x: hidden;
     display: grid;
     grid-template-rows: auto 92vh 30em 15em;
-    grid-template-columns: 10% 1fr auto 1fr 10%;
+    grid-template-columns: auto;
     grid-template-areas:
     "header header header header header"
     "hero   hero   hero   hero   hero"
@@ -225,7 +301,7 @@ footer {
 
   .scrolldown {
     position: absolute;
-    bottom: -80px;
+    bottom: -150px;
     left: 45%;
     width: 20%;
     height: 110px;
