--- a/css/style.css
+++ b/css/style.css
@@ -307,6 +307,13 @@ h6 {
       background-size: cover;
 }
 
+.project1-links {
+  font-size: 15px;
+  text-decoration: none;
+  color: black;
+  text-transform: uppercase;
+}
+
 .project1::after {
       content: "Natours Project";
       font-family: "Roboto Mono";
