--- a/css/style.css
+++ b/css/style.css
@@ -397,6 +397,7 @@ h6 {
 }
 
 /*--------------- footer section --------------- */
+
 .collab {
       text-align: right;
 }
@@ -434,7 +435,7 @@ h6 {
       border-radius: 100%;
       height: 4px;
       width: 4px;
-      margin-right: 6px;
+      margin-right: 4px;
       background: #3b5998;
 }
 
@@ -445,7 +446,7 @@ h6 {
       border-radius: 100%;
       height: 4px;
       width: 4px;
-      margin-right: 6px;
+      margin-right: 4px;
       background: #fcaf45;
 }
 
@@ -456,7 +457,7 @@ h6 {
       border-radius: 100%;
       height: 4px;
       width: 4px;
-      margin-right: 6px;
+      margin-right: 4px;
       background: #55acee;
 }
 
@@ -492,6 +493,11 @@ h6 {
             margin: 0 0 0 -22px;
             padding: 0;
       }
+}
+
+.links {
+  color: white;
+  text-decoration: none;
 }
 
 /*--------------- work page --------------- */
